...

    <!-- Snow section -->
    <string name="snow_enabled">It\'s snowing ❄️! Shake again to stop</string>
    <string name="snow_disabled">The snow has stopped</string>

    <!-- Common section -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_selected_parking_error">No parking selected. Should not happen</string>
    <string name="default_parking_name">Unnamed Parking</string>
    <string name="distance_km">%.2f km</string>
    <string name="distance_m">%.0f m</string>
    <string name="no_reviews">No reviews yet</string>
...
    <string name="already_in_favorites">Already in favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="already_in_favorites_toast">Parking is already in favorites</string>
    <string name="sign_in_to_add_favorites">Please sign in to add favorites</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="delete_dialog_title">Delete Item</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="delete_dialog_confirm_button">Delete</string>
    <string name="delete_dialog_cancel_button">Cancel</string>

    <!-- Error Messages -->
    <string name="input_min_characters">Minimum %1$d characters required (current: %2$d)</string>
    <string name="input_max_characters">Maximum %1$d characters allowed (current: %2$d)</string>
    <string name="input_min_characters_small">Minimum %1$d characters required </string>
    <string name="input_max_characters_small">Maximum %1$d characters allowed </string>
...
    <string name="attributes_picker_description_label">Description (Optional)</string>
    <string name="attributes_picker_parking_added_with_reward_toast">Parking spot added!\n+%d coins !</string>


    <!-- Attributes Picker > BottomBarAddAttr -->
    <string name="attributes_picker_bottom_bar_cancel_button">Cancel</string>
    <string name="attributes_picker_bottom_bar_submit_button">Submit</string>
    <!-- Attributes Picker > TopBarAddAttr -->
    <string name="attributes_picker_top_bar_new_parking_spot">New Parking Spot</string>
    <string name="attributes_picker_top_bar_set_attributes">Set the attributes of the parking spot</string>
    <string name="attributes_picker_bottom_bar_submit_button_toast">Please fill in all mandatory fields appropriately</string>

    <!-- Rack Type Helper -->
...
