...
  when (reportedObjectType) {
    ReportedObjectType.PARKING -> {
      EnumDropDown(
          options = ParkingReportReason.entries,
          selectedValue = selectedReasonIfParking!!,
          label = stringResource(R.string.report_reason),
          modifier = Modifier.testTag("ReasonDropdown"))
    }
    ReportedObjectType.REVIEW -> {
      EnumDropDown(
          options = ReviewReportReason.entries,
          selectedValue = selectedReasonIfReview!!,
          label = stringResource(R.string.report_reason),
...
      value = reportDescription.value,
      onValueChange = { reportDescription.value = it },
      label = stringResource(R.string.report_details),
      minCharacters = 0,
      maxCharacters = 256,
      modifier =
          Modifier.fillMaxWidth().padding(horizontal = horizontalPadding).testTag("DetailsInput"))
}

/**
 * Displays a submit button with a confirmation dialog.
 *
 * When the button is clicked, a confirmation dialog is displayed. If the user confirms, the
...
